syntax = "proto3";
package ibc.client;

option go_package = "github.com/cosmos/cosmos-sdk/x/ibc/02-client/types";

import "gogoproto/gogo.proto";
import "google/protobuf/any.proto";

// IdentifiedClientState defines a client state with additional client identifier field.
message IdentifiedClientState {
  option (gogoproto.goproto_getters) = false;
  // client identifier
  string              id           = 1 [(gogoproto.moretags) = "yaml:\"id\""];
  google.protobuf.Any client_state = 2;
}

// ClientConsensusStates defines all the stored consensus states for a given client.
message ClientConsensusStates {
  string   client_id                            = 1;
  repeated google.protobuf.Any consensus_states = 2 [(gogoproto.moretags) = "yaml:\"consensus_states\""];
}